WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246630
[GStreamer] Critical warnings in appsink workaround thing
https://bugs.webkit.org/show_bug.cgi?id=246630
Summary
[GStreamer] Critical warnings in appsink workaround thing
Philippe Normand
Reported
2022-10-17 08:41:46 PDT
(gdb) bt #0 g_logv (log_domain=0x7f588ac733f1 "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=<optimized out>) at ../glib/gmessages.c:1418 #1 0x00007f588ae0f933 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at ../glib/gmessages.c:1456 #2 0x00007f588abc5af4 in gst_debug_log_valist (category=0x0, level=GST_LEVEL_DEBUG, file=0x7f588bd736b0 "/app/webkit/Source/WebCore/platform/graphics/gstreamer/AppSinkWorkaround.cpp", function=0x7f588bb92053 "checkNeedsAppsinkWorkaround", line=46, object=0x0, format=0x7f588bbb771d "gst-plugins-base version is %s", args=0x7ffe70ffb730) at ../../Tools/flatpak/local-projects/subprojects/gstreamer-full/subprojects/gstreamer/gst/gstinfo.c:569 #3 0x00007f588abc5a8c in gst_debug_log (category=0x0, level=GST_LEVEL_DEBUG, file=0x7f588bd736b0 "/app/webkit/Source/WebCore/platform/graphics/gstreamer/AppSinkWorkaround.cpp", function=0x7f588bb92053 "checkNeedsAppsinkWorkaround", line=46, object=0x0, format=0x7f588bbb771d "gst-plugins-base version is %s") at ../../Tools/flatpak/local-projects/subprojects/gstreamer-full/subprojects/gstreamer/gst/gstinfo.c:518 #4 0x00007f588e660e06 in std::once_flag::_Prepare_execution::_Prepare_execution<std::call_once<WebCore::registerAppsinkWorkaroundIfNeeded()::$_0>(std::once_flag&, WebCore::registerAppsinkWorkaroundIfNeeded()::$_0&&)::{lambda()#1}>(WebCore::registerAppsinkWorkaroundIfNeeded()::$_0&)::{lambda()#1}::__invoke() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #5 0x00007f588a494423 in __pthread_once_slow (once_control=0x7f5890bd13f0 <WebCore::appSinkWorkaroundOnceFlag>, init_routine=0x7f588a8e4cb0 <std::__once_proxy()>) at pthread_once.c:116 #6 0x00007f588e660732 in WebCore::registerAppsinkWorkaroundIfNeeded() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #7 0x00007f588e666fe8 in std::once_flag::_Prepare_execution::_Prepare_execution<std::call_once<WebCore::ensureGStreamerInitialized()::$_1>(std::once_flag&, WebCore::ensureGStreamerInitialized()::$_1&&)::{lambda()#1}>(WebCore::ensureGStreamerInitialized()::$_1&)::{lambda()#1}::__invoke() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #8 0x00007f588a494423 in __pthread_once_slow (once_control=0x7f5890bd14d0 <WebCore::ensureGStreamerInitialized()::onceFlag>, init_routine=0x7f588a8e4cb0 <std::__once_proxy()>) at pthread_once.c:116 #9 0x00007f588e6654c1 in WebCore::ensureGStreamerInitialized() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #10 0x00007f588e6686da in WebCore::GStreamerRegistryScanner::GStreamerRegistryScanner(bool) () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #11 0x00007f588e667a92 in WebCore::GStreamerRegistryScanner::singleton() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #12 0x00007f588e6cab06 in WebCore::GStreamerWebRTCProvider::initializeVideoEncodingCapabilities() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #13 0x00007f588febb51f in WebCore::WebRTCProvider::videoEncodingCapabilities() () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #14 0x00007f588e6caa0b in WebCore::GStreamerWebRTCProvider::senderCapabilities(WTF::String const&) () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #15 0x00007f588f0cba2e in WebCore::PeerConnectionBackend::senderCapabilities(WebCore::ScriptExecutionContext&, WTF::String const&) () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #16 0x00007f588f0edc99 in WebCore::RTCRtpSender::getCapabilities(WebCore::ScriptExecutionContext&, WTF::String const&) () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #17 0x00007f588ec86fc7 in WebCore::jsRTCRtpSenderConstructorFunction_getCapabilities(JSC::JSGlobalObject*, JSC::CallFrame*) () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #18 0x00007f583b6303b8 in () #19 0x00007ffe70ffbc50 in () #20 0x00007f5890557f61 in op_call_slow_return_location () at /app/webkit/WebKitBuild/Release/lib/libWPEWebKit-2.0.so.0 #21 0x0000000000000000 in ()
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-10-17 08:54:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5445
EWS
Comment 2
2022-10-17 10:13:27 PDT
Committed
255632@main
(90eec06ee98c): <
https://commits.webkit.org/255632@main
> Reviewed commits have been landed. Closing PR #5445 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-17 10:14:18 PDT
<
rdar://problem/101252016
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug