[GStreamer] Critical warnings in appsink workaround thing https://bugs.webkit.org/show_bug.cgi?id=246630

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/graphics/gstreamer/AppSinkWorkaround.cpp:
(WebCore::registerAppsinkWorkaroundIfNeeded): Register debug category before logging anything from checkNeedsAppsinkWorkaround().

Canonical link: https://commits.webkit.org/255632@main